<resources>
    <string name="app_name">HealthCareSystem</string>
    <string name="select_time">Select Time</string>
    <string name="_10_00">10:00</string>
    <string name="back">Back</string>
    <string name="fees">Fees</string>
    <string name="address">Address</string>
    <string name="contact_number">Contact Number</string>
    <string name="_24_7_health_care">24*7 Health Care</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="full_name">Full Name</string>
    <string name="select_date">Select Date</string>
    <string name="book_appointment1">Book Appointment</string>
    <string name="_17_9_22">17/9/22</string>
    <string name="order_details">ORDER DETAILS</string>
    <string name="medicine_cart_item">medicine cart Item</string>
    <string name="checkout">checkout</string>
    <string name="deliver_location_pune">Deliver Location:Pune</string>
    <string name="total_cost_1298">Total Cost : 1298/-</string>
    <string name="delect_delivery_date">Delect delivery Date</string>
</resources>